# rabbitmq-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs
hello_world/: Cargo.toml
hello_world/src/: consumer.rs  lib.rs  producer.rs
publish_subscribe/: Cargo.toml
publish_subscribe/src/: emit_log.rs  lib.rs  receive_log.rs
routing/: Cargo.toml
routing/src/: emit_log_direct.rs  lib.rs  receive_logs_direct.rs
topics/: Cargo.toml
topics/src/: emit_log_topic.rs  lib.rs  receive_logs_topic.rs
tutorial-1/: Cargo.toml
tutorial-1-producer/: Cargo.toml
tutorial-1/src/: consumer.rs  definitions.rs  lib.rs  producer.rs
work_queues/: Cargo.toml
work_queues/src/: lib.rs  new_task.rs  producer.rs  worker.rs
